# AppointmentSite

./: pyproject.toml
core/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
core/accounts/migrations/: 0001_initial.py  0002_user_image.py  0003_alter_user_image.py  0004_alter_user_image_alter_user_role.py  0005_alter_user_role.py  0006_alter_user_role.py  0007_homeimage.py
core/appointments/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
core/appointments/migrations/: 0001_initial.py  0002_service_show.py  0003_service_image.py
core/contactUs/: admin.py  models.py  serializers.py  urls.py  views.py
core/contactUs/migrations/: 0001_initial.py  0002_location.py  0003_communicationwithus.py  0004_alter_communicationwithus_phone.py  0005_communicationwithus_created_at.py  0006_communicationwithus_is_read.py
core/core/: settings.py  urls.py
core/salons/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
core/salons/migrations/: 0001_initial.py
